[gd_scene load_steps=13 format=3 uid="uid://ds8wg31ytc5qs"]

[ext_resource type="PackedScene" uid="uid://by5c463m57u0r" path="res://worlds/GameWorld.tscn" id="1_5mud7"]
[ext_resource type="Script" path="res://worlds/InfiniteWorld/infinite_world.gd" id="2_0de8f"]
[ext_resource type="Script" path="res://framework/GoodCamera.gd" id="3_mwjpx"]
[ext_resource type="PackedScene" uid="uid://cxr6ncr17xqdn" path="res://ui/pause_screen.tscn" id="4_t0pv0"]
[ext_resource type="Script" path="res://ui/pause_screen_layer.gd" id="5_hsebt"]
[ext_resource type="PackedScene" uid="uid://bd1yhnn11tfkh" path="res://ui/menu_screen.tscn" id="6_4eu4m"]
[ext_resource type="AudioStream" uid="uid://e44e7dsks1iu" path="res://sound/mapexit.wav" id="6_6repu"]
[ext_resource type="AudioStream" uid="uid://bwh0jyib7qwpp" path="res://sound/screenie.wav" id="8_toh1w"]

[sub_resource type="Animation" id="Animation_g4x2k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GoodCamera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GoodCamera:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_e7usb"]
resource_name = "Pause"
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GoodCamera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0833333, 0.3),
"transitions": PackedFloat32Array(1, 0.366021, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(0.125, 0.125)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/PauseScreen")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"open_animation"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("../GoodCamera:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.435275, 1),
"update": 0,
"values": [0.0, 0.144862]
}

[sub_resource type="Animation" id="Animation_od1xk"]
resource_name = "Unpause"
length = 0.266669
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../GoodCamera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.25),
"transitions": PackedFloat32Array(1, 0.406126, 0.366021),
"update": 0,
"values": [Vector2(0.125, 0.125), Vector2(0.125, 0.125), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubViewportContainer/SubViewport/PauseScreen")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"close_animation"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SubViewportContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("../GoodCamera:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.34151, 1),
"update": 0,
"values": [0.514215, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mtjha"]
_data = {
&"RESET": SubResource("Animation_g4x2k"),
&"Pause": SubResource("Animation_e7usb"),
&"Unpause": SubResource("Animation_od1xk")
}

[node name="InfiniteWorld" node_paths=PackedStringArray("player", "room_browser") instance=ExtResource("1_5mud7")]
script = ExtResource("2_0de8f")
player = NodePath("PlayerObject")
room_browser = NodePath("PauseScreenLayer/SubViewportContainer/SubViewport/PauseScreen/SubViewportContainer/SubViewport/RoomBrowser")
metadata/_edit_vertical_guides_ = [120.0]
metadata/_edit_horizontal_guides_ = [88.0]

[node name="PlayerObject" parent="." index="0"]
texture_filter = 0
position = Vector2(0, 8)

[node name="GoodCamera" type="Camera2D" parent="." index="2"]
ignore_rotation = false
script = ExtResource("3_mwjpx")

[node name="CanvasLayer" parent="." index="4"]
layer = 127

[node name="TransitionScreen" parent="CanvasLayer" index="0"]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="ScreenshotFlash" type="ColorRect" parent="CanvasLayer" index="1"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="PauseScreenLayer" type="CanvasLayer" parent="." index="5" node_paths=PackedStringArray("player", "camera", "world", "room_browser")]
layer = 128
script = ExtResource("5_hsebt")
player = NodePath("../PlayerObject")
camera = NodePath("../GoodCamera")
world = NodePath("..")
room_browser = NodePath("SubViewportContainer/SubViewport/PauseScreen/SubViewportContainer/SubViewport/RoomBrowser")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseScreenLayer" index="0"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_mtjha")
}

[node name="SubViewportContainer" type="SubViewportContainer" parent="PauseScreenLayer" index="1"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="PauseScreenLayer/SubViewportContainer" index="0"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(240, 176)
render_target_update_mode = 4

[node name="PauseScreen" parent="PauseScreenLayer/SubViewportContainer/SubViewport" index="0" node_paths=PackedStringArray("player", "world") instance=ExtResource("4_t0pv0")]
unique_name_in_owner = true
player = NodePath("../../../../PlayerObject")
world = NodePath("../../../..")

[node name="RoomBrowser" parent="PauseScreenLayer/SubViewportContainer/SubViewport/PauseScreen/SubViewportContainer/SubViewport" index="0" node_paths=PackedStringArray("game_camera")]
game_camera = NodePath("../../../../../../../GoodCamera")

[node name="MenuScreen" parent="PauseScreenLayer" index="2" instance=ExtResource("6_4eu4m")]
visible = false
position = Vector2(120, 88)

[node name="MapExitSound" type="AudioStreamPlayer2D" parent="." index="6"]
stream = ExtResource("6_6repu")
volume_db = -80.0
pitch_scale = 2.0
bus = &"Fx"

[node name="CameraSound1" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource("8_toh1w")
volume_db = -10.0
pitch_scale = 1.5
bus = &"Fx"

[editable path="PauseScreenLayer/SubViewportContainer/SubViewport/PauseScreen"]
